Fixed a layout issue when compressed in size.

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -5,11 +5,10 @@ $personal-website-frontend-accent: mat-palette($mat-gray, 500);
 div.main {
     display: flex;
     background-color: mat-color($personal-website-frontend-accent);
-    height: 100%;
 }
 
-img {
-    height: 100%;
+div.image {
+    margin: 2%;
 }
 
 mat-card {
